argocd/app-configs/argo-workflows/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo-workflows.fzymgc.house`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
    - match: Host(`argoworkflows.fzymgc.house`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: argo-workflows-tls
